config update for b_pyramid

--- a/autoripper.conf
+++ b/autoripper.conf
@@ -23,7 +23,7 @@ DEFAULT_FINAL_DESTINATION="/done"
 # Old syntax: "nob_pyramid"
 # New syntax: "b_pyramid=none"
 # select one that matches your system
-DEFAULT_NO_B_PYRAMID="b_pyramid=none"
+DEFAULT_NO_B_PYRAMID="b_pyramid=strict"
 
 # TITLES
 # Allowed values:
