older mencoder profile= compatibility

--- a/autoripper.conf
+++ b/autoripper.conf
@@ -25,6 +25,11 @@ DEFAULT_FINAL_DESTINATION="/done"
 # select one that matches your system
 DEFAULT_NO_B_PYRAMID="b_pyramid=strict"
 
+# Some versions of mencoder don't support profile name (baseline/main/high).
+# This needs to be worked around by adding 'specify profile' option.
+# Change below to "0" if your encode dies with Option x264encopts: Unknown suboption profile
+DEFAULT_SPECIFY_PROFILE="1"
+
 # TITLES
 # Allowed values:
 # - "LONGEST" (only the longest title)
