subtitle burnin quirk

--- a/autoripper.conf
+++ b/autoripper.conf
@@ -30,6 +30,11 @@ DEFAULT_NO_B_PYRAMID="b_pyramid=strict"
 # Change below to "0" if your encode dies with Option x264encopts: Unknown suboption profile
 DEFAULT_SPECIFY_PROFILE="1"
 
+# Some versions of mplayer seem to ignore the "-noautosub" option and insist
+# on burning the subtitles into the stream anyway. If this happens, use "-sid 4096",
+# else leave blank
+DEFAULT_MENCODER_SUBTITLE_QUIRK="-sid 4096"
+
 # TITLES
 # Allowed values:
 # - "LONGEST" (only the longest title)
